Adição do header do Sobre (desktop e responsivo)
Também fiz :
- A linkagem entre a Home e o Sobre;
- Aumentei a espessura e o espaçamento entre a palavra e o underline.

--- a/CSS/base.css
+++ b/CSS/base.css
@@ -88,6 +88,8 @@ nav{
 }
 
 .roxo{
+    text-underline-offset: 5px;
+    text-decoration-thickness: 2px; /* Espessura da linha */
     color: var(--vermelho);
 }
 
@@ -97,6 +99,7 @@ nav{
 }
 
 .nav-select{
+    
     text-decoration: underline;
 }
 
