Adição da main de Serviços - Residenciais
Também fiz:
- Adicionei mais uma cor no root do base.css.

--- a/CSS/base.css
+++ b/CSS/base.css
@@ -3,6 +3,7 @@
     /* Cores */ 
     --branco: #fff;
     --preto: #000000;
+    --cinza: #484545;
     --vermelho: #B2231D;
     --azul-pastel: #617DF3;
     --shadow: rgba(0, 0, 0, 0.468) 0px 5px 15px;
