--- a/CSS/index.css
+++ b/CSS/index.css
@@ -469,3 +469,74 @@ section#depoimentos-secao {
         font-size: 15px;
     }
 }
+
+/* Contato */
+.contato{
+    padding: 60px 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+}
+
+.contato-text{
+    width: 400px;
+}
+
+.contato-text h1{
+    color: var(--vermelho);
+    font-size: 36px;
+}
+
+.contato-text p{
+    font-size: 24px;
+}
+
+.contato-text span{
+    font-weight: bold;
+}
+
+.formulario{
+    background-color: var(--vermelho);
+    box-shadow: var(--shadow);
+}
+
+.formulario form{
+    display:  flex;
+    flex-direction: column;
+    color: var(--branco);
+    padding: 30px;
+    gap: 20px;
+    width: 500px;
+}
+
+.formulario-input input{
+    background-color: var(--branco);
+    padding: 15px;
+    border: none;
+}
+
+.formulario-input{
+    display: flex;
+    flex-direction: column;
+}
+
+.formulario button{
+    background-color: var(--vermelho);
+    padding: 10px 40px;
+    border: solid 3px var(--branco);
+
+    color: var(--branco);
+    font-size: 20px;
+    font-family: 'Montserrat',sans-serif;
+    font-weight: 500;
+
+    transition: 300ms;
+    box-shadow: var(--shadow);
+}
+
+.form-button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
